# helix

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
android/: README.md
docs/: ARCHITECTURE.md  PHONE_SETUP.md  SECURITY.md  SKILL_DEV.md
helix/: __init__.py  __main__.py  config.py  conversation.py  events.py  notifications.py  text_utils.py
helix/llm/: __init__.py  anthropic_provider.py  base.py  openai_compat.py
helix/memory/: __init__.py  manager.py
helix/security/: __init__.py  policy.py
helix/skills/: __init__.py  loader.py
helix/surfaces/: __init__.py  adb_setup.py  cli.py  doctor.py  model_switcher.py  selector.py  tui.py
helix/surfaces/web_api/: __init__.py  server.py
helix/tools/: __init__.py  base.py  bash.py  file.py  memory.py  skill_manage.py  web.py
helix/tools/phone/: __init__.py  _common.py  apps.py  call.py  camera.py  clipboard.py  hardware.py  location.py  notification.py  sms.py  tts.py  ui.py
helix/workspaces/: __init__.py  base.py  local.py  termux.py
scripts/: install_pc.sh  install_termux.sh  setup_adb.sh
web/: next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ChatView.tsx  FilesView.tsx  MemoryView.tsx  OnboardingBanner.tsx  QuickActions.tsx  SessionsView.tsx  SettingsView.tsx  Sidebar.tsx  SkillsView.tsx  TestConnectionButton.tsx  ToolCallCard.tsx  ToolsView.tsx
web/lib/: api.ts  store.tsx  utils.ts
web/public/: manifest.json
