[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-agent"
version = "0.1.0"
description = "HELIX — a self-improving, phone-native agent harness. Red-and-blue DNA of an agent that owns its own learning."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "HELIX contributors"}]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",        # OpenAI-compatible client (works with Z.ai, Ollama, LM Studio, etc.)
    "anthropic>=0.34.0",     # Anthropic provider
    "httpx>=0.27.0",         # HTTP client
    "pydantic>=2.7.0",       # Typed events + actions
    "tiktoken>=0.7.0",       # Token counting
    "fastapi>=0.115.0",      # Web API + WebSocket
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",          # Terminal UI
    "prompt-toolkit>=3.0.0", # Interactive CLI
    "click>=8.1.0",          # CLI commands
    "croniter>=2.0.0",       # Cron scheduler (future)
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]
browser = ["playwright>=1.45"]
mcp = ["mcp>=0.9"]

[project.scripts]
helix = "helix.__main__:main"

[tool.setuptools.packages.find]
include = ["helix*"]

[tool.ruff]
line-length = 110
target-version = "py311"
